Added menus and shared preferences store

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidEseiPracticas</string>
+    <string name="lbl_inserta">Inserta</string>
+    <string name="lbl_borra">Borra</string>
 </resources>
